test/testdata/list/index_assignment_non_number_error.lox
var list = [];
list["foo"] = 0; // error: index ("foo") must be a non-negative integer
